Select control: fix misalignment and hide scroll bar (https://github.com/woocommerce/woocommerce-admin/pull/3215)
* Fix misalignment in select control

* Fix scroll appearing in Select Control

--- a/plugins/woocommerce-admin/packages/components/src/search/style.scss
+++ b/plugins/woocommerce-admin/packages/components/src/search/style.scss
@@ -44,6 +44,7 @@
 		font-size: 13px;
 		color: #72777c;
 		position: static;
+		transform: none;
 		margin: 0;
 		width: 100%;
 	}
